    : 링크에 이미지 경로 포함시 본문 표시 오류 수정 (신비님 제안)
    : 목록에서 선택 비밀글 설정 (의자왕님 제안)
    : 외부 이미지 썸네일 생성 후 글 수정시 이미지 경로 변경 체크 (도장관님 제안)
    : 뷰페이지에 스킨설정 화면 링크 추가 (젬스박님 제안)
    : 뷰페이지에 보드설정 화면 링크 추가
    : font-awesome 4.4.0 업그레이드
    : 그누보드5 - 휴지통 사용시 최근게시물 cache 삭제
    : 그누보드5 - 워터마크 본문 표시 오류 수정 (잿빛푸우님 제안)
    : 그누보드5 모바일 경로 오류수정 (엑노님 제안)
    : 게시물 선택하지 않고 공지올림/내림 진행시 오류수정  (엑노님 제안) 

    miwit/HISTORY
    miwit/_common.php
    miwit/mw.adm/_common.php
    miwit/mw.lib/mw.function.lib.php
    miwit/mw.proc/_common.php
    miwit/mw.proc/mw.g5.adapter.extend.php
    miwit/mw.proc/mw.file.viewer.php
    miwit/mw.proc/mw.asset.php
    miwit/mw.proc/mw.top.button.php
    miwit/mw.proc/mw.notice.check.php
    miwit/mw.geditor/_common.php
    miwit/mw.okname/_common.php
    miwit/mw.js/mw.g5.adapter.js.php
    miwit/mw.css/font-awesome-4.4.0/*
    miwit/list.skin.php
    miwit/view_head.skin.php
    miwit/secret_all.php
    miwit/style.common.css
 
ver 2.9.7 (15.09.23)
    : 파일 업로드 인젝션 취약점 보안 (한국인터넷진흥원에서 알려 주셨습니다.)

    miwit/HISTORY
    miwit/mw.geditor/upload.php
    miwit/mw.lib/mw.function.lib.php
    miwit/mw.proc/mw.comment.image.php
    miwit/mw.proc/mw.comment.image.update.php
    miwit/write_comment_update.head.skin.php
 
ver 2.9.6 (15.09.01)
    : 반응형 지원!
    : 폴더명 mw.basic 에서 miwit 로 변경
    : 그누보드5 - 이미지 새창 (엑노님 제안)
    : 카테고리탭에서 div 태그 제거 (신비님 제안)
    : 크롬 css 돋움폰트적용 오류 수정 (gino님 제안)
    : 퍼머링크 사용시 포인트 차감 메시지 오류 수정 (금광님 제안)
    : 서명 게시판 관리자에서 사용안할시 안보이기 (재아님 제안)
    : 모바일 체크 함수 처리 (엑노님 제안)
    : 본문 버튼 위치 번경
    : 분류 라인 오류 수정
    : win_open -> window.open 으로 변경
    : 카카오스토리 웹공유
    : 엄지 서비스 중지에 따른 옵션 제거
    : 페이지 오류 수정 (쪼리님 제안)

    miwit/HISTORY
    miwit/mw.adm/mw.config.php
    miwit/mw.adm/mw.config.update.php
    miwit/mw.proc/mw.file.viewer.php
    miwit/mw.proc/mw.one.talk.php
    miwit/mw.proc/mw.top.button.php
    miwit/mw.proc/mw.vote.php
    miwit/mw.lib/mw.skin.basic.lib.php
    miwit/mw.lib/mw.function.lib.php
    miwit/list.skin.php
    miwit/write.skin.php