@@ -12,6 +12,7 @@ ver 2.9.8 (15.00.00)
     : 그누보드5 - 워터마크 본문 표시 오류 수정 (잿빛푸우님 제안)
     : 그누보드5 모바일 경로 오류수정 (엑노님 제안)
     : 게시물 선택하지 않고 공지올림/내림 진행시 오류수정  (엑노님 제안) 
+    : 공지필수 데이터 filter 처리
 
     miwit/HISTORY
     miwit/_common.php
@@ -29,6 +30,7 @@ ver 2.9.8 (15.00.00)
     miwit/mw.css/font-awesome-4.4.0/*
     miwit/list.skin.php
     miwit/view_head.skin.php
+    miwit/view_comment.skin.php
     miwit/secret_all.php
     miwit/style.common.css
  
